# pyguard

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  DESIGN.md  PLAN_STEP2.md  README.md  STEP1.md  pyproject.toml
examples/: github-actions.yml
plans/: linting-rules-implementation.md  phase-2a-scanner-parser.md  phase-2b-diagnostics-formatters.md
scripts/: validate.sh
src/pyguard/: __init__.py  __main__.py  cli.py  config.py  constants.py  diagnostics.py  explain.py  formatters.py  ignores.py  parser.py  runner.py  scanner.py  types.py
src/pyguard/fixers/: _util.py  imp001.py  kw001.py  pipeline.py  typ002.py  typ003.py  typ010.py
src/pyguard/rules/: base.py  exp001.py  exp002.py  imp001.py  kw001.py  registry.py  ret001.py  typ001.py  typ002.py  typ003.py  typ010.py
tests/: __init__.py  conftest.py  fix_scenarios_tests.py  linter_scenarios_tests.py  test_cli.py  test_config.py  test_diagnostics.py  test_explain.py  test_fix_command.py  test_fixers_imp001.py  test_fixers_kw001.py  test_formatters.py  test_ignores.py  test_logging.py  test_parser.py  test_pre_commit_hooks.py  test_rules_exp001.py  test_rules_exp002.py  test_rules_framework.py  test_rules_imp001.py  test_rules_kw001.py  test_rules_ret001.py  test_rules_typ001.py  test_rules_typ002.py  test_rules_typ010.py  test_runner.py  test_scanner.py  test_tryout.py
